2002-03-18  Junichi Uekawa  <dancer@debian.org>

	* libdshconfig.c (read_oneline): fixing many bugs, to make it work. Yeah, it never compiled.
	(read_oneline): fix end bug.

	* libdshconfig.h: add declaration for open_dshconfig

	* test-dshconfig.c (main): create a new program to test the function

2002-02-27  Junichi Uekawa  <dancer@debian.org>

	* debian/changelog: Mark for release

2002-02-05  Junichi Uekawa  <dancer@debian.org>

	* dsh.c: some beautification
	added header files "sys/stat.h" "fnctl.h" declaration
	to get open() to work.

	* libdshconfig.c (open_dshconfig): making a function implementation to hopefully work.

	* debian/changelog: updated the changelog with the bugfixer.

	* dsh.c (open_devnull): created a new function.
	(main): uses /dev/null for input as default.

2002-02-03  Junichi Uekawa  <dancer@debian.org>

	* libdshconfig.c (read_oneline): some minor playing around.
	Aiming to make a basis for config reader usable in dsh, and 
	also another project I am planning to work on.
	
	* libdshconfig.h: created
	(dshconfig): created
	(dshconfig_internal): created

	* libdshconfig.c: creating a new file.

2002-01-26  Junichi Uekawa  <dancer@debian.org>

	* dsh.c (main): error check asprintf.

2002-01-25  Junichi Uekawa  <dancer@debian.org>

	* ChangeLog: resume using the ChangeLog file.

	* TODO: created as a memo to document some wishlist.

2001-05-14  Junichi Uekawa  <dancer@netfort.gr.jp>

	* dsh.1: added documentation for homedir configs.

	* dsh.c (parse_options): added support for machines config.
	(read_machinelist): The machines list support.
	(parse_options): Configs in homedir too.

2001-05-13  Junichi Uekawa  <dancer@netfort.gr.jp>

	* dsh.1: Created a manpage

	* Makefile: Copied from other project. 

	* dsh.c: Created / started, by
	dancer@{debian.org,netfort.gr.jp,mikilab.doshisha.ac.jp} 
